fix: fix the overflow on x axis

--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body {
   color: var(--color-text);
 
   background-color: var(--color-background);
+  overflow-x: hidden;
 }
 
 .grid-customs {
